# adapsis

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  TelegramBot.ax.work  adapsis-design-doc.md  adapsis-gpt.json  adapsis-mimo.json  clean.json  forge-design-doc.md  forgeos-session.json  my-project.json  start.sh  telegram-session-a3.json  telegram-session-gpt.json  telegram-session.json
bench/: bench.py  bench.rs  bench_native
examples/: adapsis_in_adapsis.ax  benchmark.ax  compile_test.ax  compile_test.forge  complex_system.ax  complex_system.forge  concat_compile.ax  concat_compile.forge  eval_test.ax  eval_test.forge  expr_parser.ax  expr_parser.forge  file_io.ax  file_io.forge  fizzbuzz.ax  fizzbuzz.forge  forge_in_forge.forge  http_server.ax  http_server.forge  if_else.ax  if_else.forge  imperative.ax  imperative.forge  json_test.ax  json_test.forge  modulo.ax  modulo.forge  multi_param.ax  multi_param.forge  multi_param_chain.ax  multi_param_chain.forge  recursive_types.ax  recursive_types.forge  result_chain.ax  result_chain.forge  self_hosted_repl.ax  self_hosted_repl.forge  self_read.ax  self_read.forge  service_lifecycle.ax  (+13 more)
scripts/: watch-autonomous.sh
src/: api.rs  ast.rs  attachment.rs  builtins.rs  bytecode.rs  compiler.rs  coroutine.rs  eval.rs  events.rs  intern.rs  library.rs  llm.rs  main.rs  orchestrator.rs  parser.rs  permissions.rs  prompt.rs  repl.rs  server.rs  session.rs  shared_state.rs  telegram.rs  typeck.rs  validator.rs  vm.rs
tools/: extra_training_scenarios.py  finetune_gemma4.py  generate_training_data.py  merge_training_data.py  module_training_examples.py
(+42 files in other folders)
