[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
cranelift = "0.119"
cranelift-module = "0.119"
cranelift-jit = "0.119"
cranelift-native = "0.119"
target-lexicon = "0.13"
exec = "0.3"
