[package]
name = "adapsis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
async-stream = "0.3"
cranelift = "0.119"
cranelift-module = "0.119"
cranelift-jit = "0.119"
cranelift-native = "0.119"
target-lexicon = "0.13"
exec = "0.3"
regex = "1"
base64 = "0.22"
libc = "0.2"
smallvec = "1.15.1"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
